# sys-wiz

./: app.py  pyproject.toml  setup_syswiz.sh  sys-wiz.sh  sys_wiz_launcher.py
dnf/: definitions.py
safety/: guardrails.py
screens/: execution.py  splash.py
sys-wiz/: pyproject.toml  sys_wiz_launcher.py
sys-wiz/syswiz/: app.py
sys-wiz/syswiz/dnf/: definitions.py
sys-wiz/syswiz/utils/: system.py
utils/: system.py
