[project]
name = "sys-wiz"
version = "0.1.0"
description = "Transparent, guided wizard for DNF package management"
authors = [{name = "SysAdmin", email = "admin@localhost"}]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40.0",
    "distro>=1.8.0"
]

[project.scripts]
sys-wiz = "syswiz.app:main"